# Song-Manager

./: .gitignore  README.md  Readme.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
FilePilot/: README.md  start.sh
FilePilot/src/: welcome.py
FilePilot/src/collection/: change_location.py  check_for_duplicates.py  convert_rb5_to_rb6.py  diff_xml.py  normalize_audio.py  sync_folders.py
FilePilot/src/pages/: 01_⏬_download.py  02_🗂️_rekordbox.py
SongSmith/: README.md
SongSmith/config/: spotiplaylist_dummy.yaml
SongSmith/src/: app.py  entities.py
config/: connection_dummy.yaml  download_dummy.yaml  spotiplaylist_dummy.yaml
docs/: Tables.drawio  developement.md  other.md  rekordbox.md  spotify.md
scripts/: create_new_arrivals_playlists.sh
shared/: RB_handler.py  dataloading.py  dataprocessing.py  utils.py
src/: RB_handler.py  change_location.py  check_for_duplicates.py  convert_rb5_to_rb6.py  create_csv_files.py  create_new_songs_playlist.py  dataloading.py  dataprocessing.py  dataset.py  datastoring.py  diff_xml.py  download_songs.py  download_songs_from_url.py  logger.py  normalize_audio.py  sync_folders.py  utils.py
src/collection/: change_location.py  check_for_duplicates.py  convert_rb5_to_rb6.py  diff_xml.py  normalize_audio.py  sync_folders.py
src/helpers/: RB_handler.py  dataloading.py  dataprocessing.py  datastoring.py  logger.py  logging_config.py  utils.py
src/streaming/: create_new_songs_playlist.py  dataset.py  download_songs.py  download_songs_from_url.py
(+5 files in other folders)
