[project]
name = "song-manager"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9.0",
    "dirsync",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "spotdl>=4.2.11",
    "streamlit>=1.45.0",
    "tqdm>=4.67.1",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ruff>=0.11.8"]

[tool.uv.sources]
dirsync = { git = "https://github.com/beathvn/dirsync.git", rev = "develop" }

[tool.ruff]
exclude = [".git", "__pycache__", ".venv"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "auto"
